add more features